less/style.less
/* ... */
// index team
.index-team__overflow {
    overflow-y: auto; cursor: grab; -ms-overflow-style: -ms-autohiding-scrollbar; padding-bottom: 20px;
    &::-webkit-scrollbar {display: none;}
    &.is-grabbing {cursor: grabbing;}
}
.index-team__list {display: flex;}
.index-team__item {width: 360px; max-width: 100%; flex-shrink: 0;}
.index-team__item:last-child {box-sizing: content-box; padding-right: @container-padding-small;}
.index-team__image {display: block; max-width: 100%;}
.index-team__name {margin-top: 25px; padding-right: 20px;}
.index-team__description {margin-top: 16px; padding-right: 20px;}
@media (min-width: @breakpoint-small-up) {
    .index-team__item:last-child {padding-right: @container-padding;}
    .index-team__name {margin-top: 30px; padding-right: 55px;}
    .index-team__description {margin-top: 20px; padding-right: 55px;}
}
@media (min-width: @breakpoint-large-up) {
    .index-team__item {width: 400px;}
    .index-team__name {margin-top: 45px;}
    .index-team__description {margin-top: 25px;}
}
// incorrect mq merge
/* clean-css ignore:start */
@media (min-width: @breakpoint-xxlarge-up) {
    .index-team__overflow {
        padding-left: calc((100vw - @container-width) / 2);
        padding-left: calc((var(--rw) - @container-width) / 2);
        padding-right: calc((100vw - @container-width) / 2);
        padding-right: calc((var(--rw) - @container-width) / 2);
    }
    .index-team__item:last-child {
        padding-right: calc((100vw - @container-width) / 2);
        padding-right: calc((var(--rw) - @container-width) / 2);
    }
}
/* clean-css ignore:end */


// media
/*
.section-media__list {display: flex; align-items: center; flex-wrap: wrap; margin-top: -65px;}
.section-media__item {flex-shrink: 0; width: 50%; height: 20px; margin-top: 65px; text-align: center; position: relative}
.section-media__item-divider {width: 100%; flex-shrink: 0;}
.section-media__image {vertical-align: top; position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%) scale(0.7);}
@media (min-width: @breakpoint-medium-up) {
    .section-media__item {width: 33.333%; height: auto;}
    .section-media__image {position: static; transform: none;}
}
@media (min-width: @breakpoint-xmedium-up) {
    .section-media__list {justify-content: space-between;}
    .section-media__item {width: auto;}
}
@media (min-width: @breakpoint-xlarge-up) {
    .section-media__list {padding-right: 64px;}
}
*/









// Product
:root {
    --feature-cell-height: 95px;
    --feature-cell-height-outer: 97px;
    --feature-shift: 10px;
    --feature-padding-top: 10px;
    --t-feature-in: 0.4s;
    --t-feature-out: 0.25s;
}
.product-features__grid {position: relative; margin: -1px 0;}
.product-features__cell {padding: 1px; height: var(--feature-cell-height-outer);}
.product-features__item-wrap { }
.product-features__item {
    background: #fff; padding: var(--feature-padding-top); display: flex; flex-direction: column; position: absolute; width: 100%; clip: rect(0 auto var(--feature-cell-height) 0); transition: var(--t-feature-out) @t-ease-out; z-index: 0; /* value to transition out */ transform: translate(0, 0); /* fix edge value to transition out */
    &.is-active {clip: rect(0 auto var(--feature-height-full) 0); transform: translate(var(--feature-shift), var(--feature-shift)); z-index: 2; transition: var(--t-feature-in) @t-ease-out;}
    &.is-inactive {opacity: 0.65;}

    &.is-active {
        > .product-features__content {opacity: 1; transform: translateY(0); transition: var(--t-feature-in) @t-ease-out;}
        > .product-features__open {pointer-events: none;}
        .product-features__open-icon {opacity: 0; transition: 0.15s;}
        .product-features__close-icon {opacity: 1; transition: 0.3s calc(var(--t-feature-in) - 0.15s);}
    }
}
.product-features__title {margin-bottom: 24px;}
.product-features__content {opacity: 0; transition: var(--t-feature-out) @t-ease-out;}
.product-features__lead { margin-bottom: 24px;}
@feature-button-size: (16px + 15px * 2);
.product-features__open, .product-features__close {position: absolute; width: @feature-button-size; height: @feature-button-size; display: flex; align-items: center; justify-content: center;}
.product-features__open { right: 0; top: calc(var(--feature-cell-height) - @feature-button-size); }
.product-features__open-icon {width: 16px; height: 16px; transform: rotate(90deg); transition: 0.3s calc(var(--t-feature-out) - 0.15s);}
.product-features__close {right: 0; top: 2px;}
.product-features__close-icon {width: 16px; height: 16px; opacity: 0; transition: 0.3s;}
@media (min-width: @breakpoint-small-up) {
    :root {
        --feature-shift: 15px;
        --feature-padding-top: 20px;
    }
    .product-features__close {width: (25px + 15px * 2); height: (25px + 15px * 2); right: 8px; top: 8px;}
    .product-features__close-icon {width: 25px; height: 25px; }
}
/* ... */

